# ChangeLog for media-gfx/xv
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/ChangeLog,v 1.90 2008/05/06 22:31:25 lavajoe Exp $

*xv-3.10a-r15 (06 May 2008)

  06 May 2008; Joe Peterson <lavajoe@gentoo.org>
  +files/xv-3.10a-fix-wait-20070520.patch, +xv-3.10a-r15.ebuild:
  Fix -wait option (bug #149270)

  09 Nov 2007; Fabian Groffen <grobian@gentoo.org> xv-3.10a-r12.ebuild,
  xv-3.10a-r14.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> xv-3.10a-r14.ebuild:
  Stable on ppc64; bug #194381

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> xv-3.10a-r14.ebuild:
  Stable on amd64 wrt bug #194381

  02 Oct 2007; Lars Weiler <pylon@gentoo.org> xv-3.10a-r14.ebuild:
  stable ppc, bug #194381

  02 Oct 2007; Jeroen Roovers <jer@gentoo.org> xv-3.10a-r14.ebuild:
  Stable for HPPA (bug #194381).

  01 Oct 2007; Raúl Porcel <armin76@gentoo.org> xv-3.10a-r14.ebuild:
  alpha/ia64/sparc/x86 stable wrt #194381

*xv-3.10a-r14 (08 Aug 2007)

  08 Aug 2007; Joe Peterson <lavajoe@gentoo.org> -xv-3.10a-r13.ebuild,
  +xv-3.10a-r14.ebuild:
  Fix doc path not to use /usr/local (bug #188034)

*xv-3.10a-r13 (04 Aug 2007)

  04 Aug 2007; Joe Peterson <lavajoe@gentoo.org>
  +files/xv-3.10a-disable-jp2k-20070520.patch,
  +files/xv-3.10a-osx-bsd-20070520.patch,
  +files/xv-3.10a-vdcomp-osx-20070520.patch, metadata.xml,
  +xv-3.10a-r13.ebuild:
  New patch set (20070520), which includes fix for bug #135304

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xv-3.10a-r12.ebuild:
  Drop virtual/x11 references.

  02 Jun 2007; Joe Peterson <lavajoe@gentoo.org>
  +files/xv-3.10a-osx-bsd.patch, -files/xv-3.10a-r12-xv-osx.patch,
  xv-3.10a-r12.ebuild:
  Patch to work on Gentoo/FreeBSD; add ~x86-fbsd keyword
  (bug #177888)

  11 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -files/xv-3.10a-r11-xv-osx.patch, -xv-3.10a-r8.ebuild,